--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
     "core-js": "^2.5.4",
+    "cors": "^2.8.4",
+    "node-sspi": "^0.2.3",
     "rxjs": "^6.0.0",
     "zone.js": "~0.8.26"
   },
