--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --watch",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -12,18 +12,36 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^6.1.0",
+    "@angular/cdk": "^6.0.0-rc.5",
     "@angular/common": "^6.1.0",
     "@angular/compiler": "^6.1.0",
     "@angular/core": "^6.1.0",
     "@angular/forms": "^6.1.0",
     "@angular/http": "^6.1.0",
+    "@angular/material": "^6.0.0-rc.5",
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
+    "@angular/platform-server": "^6.0.0-rc.5",
     "@angular/router": "^6.1.0",
+    "@covalent/core": "^2.0.0-beta.1",
+    "@covalent/dynamic-forms": "^2.0.0-beta.1",
+    "@covalent/highlight": "^2.0.0-beta.1",
+    "@covalent/http": "^2.0.0-beta.1",
+    "@covalent/markdown": "^2.0.0-beta.1",
+    "@swimlane/ngx-charts": "^7.3.0",
+    "angular-in-memory-web-api": "^0.6.1",
     "core-js": "^2.5.4",
     "cors": "^2.8.4",
+    "d3": "^4.9.0",
+    "hammerjs": "^2.0.8",
+    "highlight.js": "9.10.0",
     "node-sspi": "^0.2.3",
+    "node-teradata": "^1.5.0",
+    "npm": "^6.4.0",
+    "reinstall": "^2.0.0",
     "rxjs": "^6.0.0",
+    "rxjs-compat": "^6.0.0-rc.0",
+    "showdown": "1.6.4",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
@@ -31,18 +49,25 @@
     "@angular/cli": "~6.1.3",
     "@angular/compiler-cli": "^6.1.0",
     "@angular/language-service": "^6.1.0",
+    "@types/hammerjs": "2.0.30",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
+    "@types/selenium-webdriver": "2.53.36",
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~1.7.1",
     "karma-chrome-launcher": "~2.2.0",
+    "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "~2.0.0",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.3.0",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "karma-remap-istanbul": "^0.6.0",
+    "karma-spec-reporter": "^0.0.31",
+    "phantomjs-prebuilt": "^2.1.16",
+    "protractor": "^5.4.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
     "typescript": "~2.7.2"
