--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.0.0-rc.0",
     "showdown": "1.6.4",
+    "time": "^0.12.0",
+    "time-stamp": "^2.1.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
